# schedule-manager-aed

./: .gitignore  Authentication.h  CLI.cpp  CLI.h  CMakeLists.txt  README.MD  README.md  User.cpp  User.h  main.cpp  main.h  userdata.csv
csvdata/: syslog.csv  tickets.csv  userdata.csv
docs/: Doxyfile
docs/output/html/: _application_8h_source.html  _authentication_8h_source.html  _lesson_8h_source.html  _schedule_8h_source.html  _student_8h_source.html  _ticket_8h_source.html  _uc_class_8h_source.html  _user_8h_source.html  annotated.html  class_application-members.html  class_application.html  class_authentication-members.html  class_authentication.html  class_lesson-members.html  class_lesson.html  class_schedule-members.html  class_schedule.html  class_student-members.html  class_student.html  class_ticket-members.html  class_ticket.html  class_uc_class-members.html  class_uc_class.html  class_user-members.html  class_user.html  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8b4a6c6015f0c5e725b2853d0179f696.html  dir_bbb7642600419f71c1dd986e790f8d84.html  dir_d006503333edcf0ee93602f4cf2a7913.html  dir_d90fcc4c95e9354acdaa3401d2122fff.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  index.html  main_8cpp.html  md__2home_2vascocosta_2_documents_2inf2324_2aed_2_a_e_dproject_2_r_e_a_d_m_e.html  menudata.js  pages.html  (+1 more)
schedule/: .~lock.classes.csv#  .~lock.students_classes.csv#
src/: Application.cpp  Application.h  Authentication.cpp  Authentication.h  Lesson.cpp  Lesson.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  Ticket.cpp  Ticket.h  UcClass.cpp  UcClass.h  User.cpp  User.h  main.cpp
(+10 files in other folders)
